--- a/사전/RDBMS/데이터 모델링.md
+++ b/사전/RDBMS/데이터 모델링.md
@@ -31,11 +31,28 @@
 삽입 이상, 갱신 이상, 삭제 이상을 방지하기 위해서 사용한다.
 의도치 않은 정보의 삽입이나 삭제, 정보의 불일치.
 
-1 정규화
-- 모든 속성의 원자성을 확보
+1차 정규화
+- 모든 속성의 원자성을 확보.
+    - 2개 이상으로 해석될 수 있는 경우.
+    - 유사한 속성이 반복되는 경우.
 - 주식별자에 대해 1:1 관계를 가지도록 하는것
+
 2 정규화
-- 일반 속성 중 주식별자의 일부에 대해 함수종속성을 갖는 부분 함수종속성을 제거.
+- 일반 속성 중 주식별자의 일부에 대해 
+함수종속성을 갖는 부분 함수종속성을 제거.
+- 기본키가 2개 이상의 속성으로 이루어진 경우 부분 함수종속성을 제거한다.
+    - 함수종속성 Functional Dependency : x가 정해지면 y가 결정되는 경우 y가 함수종속성을 가진다.
+
+3 정규화
+- 기본키를 제외한 칼럼 간의 종속성을 제거한다. 
+- 이행 함수종속성을 제거한다.
+    - 이행 함수종속성 : 일반 속성 간의 종속성
+
+BCNF
+- 엄밀히 말해서 제 3 정규화의 일부.
+- 후보키가 있는 경우, 후보키가 기본키를 종속시키면 분해한다.
+
+
 ### 반정규화
 조회 성능을 향상시키기 위해 사용한다.
 join을 여러번 사용하는 경우.
